add title and researche querstions

--- a/main.tex
+++ b/main.tex
@@ -34,12 +34,12 @@
 	\vspace{2mm}
 }
 
-\newcommand{\rqi}{\textbf{}}
-\newcommand{\rqii}{\textbf{}}
-\newcommand{\rqiii}{\textbf{}}
+\newcommand{\rqi}{\textbf{How to characterize Defect Debt in a software project?}}
+\newcommand{\rqii}{\textbf{Defect Debt has a negative impact in feature addition?}}
+\newcommand{\rqiii}{\textbf{It is possible to create a model to Defect Debt?}}
 
 \begin{document}
-\title{Paper Title here}
+\title{On Characterizing and Modeling Defect Technical Debt}
 
 \author{\IEEEauthorblockN{Everton da S. Maldonado}
 
