--- a/bib.bib
+++ b/bib.bib
@@ -3,3 +3,9 @@
   howpublished = {\url{http://googlechromereleases.blogspot.ca/}},
   note = {Accessed: 2015-04-15}
 }
+
+@misc{commit_guru,
+  title = {Commit Guru},
+  howpublished = {\url{http://commit.guru/}},
+  note = {Accessed: 2015-04-15}
+}
