add metrics section

--- a/bib.bib
+++ b/bib.bib
@@ -9,3 +9,13 @@
   howpublished = {\url{http://commit.guru/}},
   note = {Accessed: 2015-04-15}
 }
+
+@article{mccabeTSE1976,
+	title={A complexity measure},
+	author={McCabe, Thomas J},
+	journal={Software Engineering, IEEE Transactions on},
+	number={4},
+	pages={308--320},
+	year={1976},
+	publisher={IEEE}
+}
