--- a/approach.tex
+++ b/approach.tex
@@ -11,7 +11,7 @@ The goal of our project is to distinguish Defect Debt from Bugs. In order to do 
 
 We use Google Chrome to conduct our study. Chrome is a large, mature open source software mostly written in C/C++. The criteria to select this project are its size, the easy access to its source code repository and to the its issuer tracker. Other than that, we had at our disposal some of the desired data that was used in a previous study. This data contained 47.938 html files and 5 tables. Each one of the files represent a bug extracted from the issue tracker. The tables contains the necessary information to link issues files, bugs and commits together. More details about the project can be found in table \ref{tab:project_details}.
 
-To complement the data necessary to our study, we extract from the Chrome Releases website \ref{chrome_releases} the release date of each stable version release, the tag of the release and the release number. Then we store this data in our database.
+To complement the data necessary to our study, we extract from the Chrome Releases website \cite{chrome_releases} the release date of each stable version release, the tag of the release and the release number. Then we store this data in our database.
  
 In order to have all the source code available we clone Chromium Git repository. 
 
@@ -21,9 +21,9 @@ After the extraction we process the data and search for attributes that will hel
 
 First, we create the attributes to store the date that the bug was reported, the release which the bug was reported, the number of comments found in the bug and the release that the bug was commited. Then we process the issues files to get the reported date and the number of comments of each bug. The release and commit dates we get from the release table. 
 
-Second, we create the attributes to store information about the commit classification and the files included in the commit. We use Commit Guru\ref{commit_guru} to gather this information. Commit Guru is an on-line tool, which run a series of source code analysis in a given git repository url. The commit classification is based on the commit message and is used to predict the intend of a change. The process uses key words and expressions that are strong indicators of intend, like `add' or `bug fix'. The possibles classifications are `Feature Addition', `Corrective', `Preventative', `Merge', `Non Functional', `Perfective' and without classification.
+Second, we create the attributes to store information about the commit classification and the files included in the commit. We use Commit Guru\cite{commit_guru} to gather this information. Commit Guru is an on-line tool, which run a series of source code analysis in a given git repository url. The commit classification is based on the commit message and is used to predict the intend of a change. The process uses key words and expressions that are strong indicators of intend, like `add' or `bug fix'. The possibles classifications are `Feature Addition', `Corrective', `Preventative', `Merge', `Non Functional', `Perfective' and without classification.
 
-Third, we create a table to store metrics values. We collect our metrics using Understand a code analysis tool. This tool can analyze different releases of a project and create a separated database containing several metrics \ref{understand_metrics} for each one of the processed releases. It is possible to access these databases through an API and collect the processed information. We checkout 18 stable releases from our Chrome repository based on the collected tag information from the selected releases. Due to the size of the project and time constraints we use only the `chrome' directory without the third party libraries in our analysis. The whole process took approximately 16 hours and generated more than 2GB of data. 
+Third, we create a table to store metrics values. We collect our metrics using Understand a code analysis tool. This tool can analyze different releases of a project and create a separated database containing several metrics \cite{understand_metrics} for each one of the processed releases. It is possible to access these databases through an API and collect the processed information. We checkout 18 stable releases from our Chrome repository based on the collected tag information from the selected releases. Due to the size of the project and time constraints we use only the `chrome' directory without the third party libraries in our analysis. The whole process took approximately 16 hours and generated more than 2GB of data. 
 
 Different scripts written in Python and SQL were developed during this study in order to make this process automatic and easily reproducible. We provide the link\footnotetext{https://github.com/maldonado/soen6611} to these files just to evaluation purposes.
 
@@ -33,4 +33,24 @@ The most important data to link for our study are bug reports and the commits th
 
 \subsection{Define metrics}
 
+In this section we describe the metrics used in our study. All of the metrics are grouped by release as our goal is to analyze the project in the release level. 
 
+\textbf{Commit classification:} A commit can be classified as `Feature Addition', `Corrective', `Preventative', `Merge', `Non Functional', `Perfective' and without classification. We store the total number of each one of these classifications per release. %We selected these metrics to reveal the nature of the changes in the different releases and mostly to track feature addition behavior. 
+
+\textbf{Churn:} We calculate churn as the number of lines changed in a file compared with its previous version. Both the addition and deletion of a line in a file is considered as a change. We calculate the total churn by summing the number of lines added and removed of all commits per release. %This metric is important 
+
+\textbf{Developers:} This metric is the number of developers that had at least one commit in the analyzed version. In our study a developer is identified by the user login contained in the commit message. We choose to identify the developers by the login instead of using email because most developers have more than one email account in their git account. 
+
+\textbf{Developers joining or leaving the project:} This is a derived metric based on the total number of developers in the previous release. If the difference of unique developers from one release to another is positive we store this value as developers joining, and if the difference is negative we store the value as developers leaving the project. We do not make any assumption of the experience of the developers in this metric.
+
+\textbf{Complexity:} This metric is McCabe's Cyclomatic Complexity \cite{mccabeTSE1976} calculated by Understand tool.
+
+\textbf{Lines of code:} The count of all lines of code in the source files including comments. This metric does not take into consideration blank lines.
+
+\textbf{Bug report comments:} We extract this metric based on the number of replies that one posted bug report has. All replies in the issuer tracker is treated as a comment. Our perception is that users impacted by a Defect Debt will comment in the issuer tracker page to ask for a fix or to search for a `work-around' while the problem is not solved. We intuitively think that bug reports with a hight number of comments are bug reports of Defect Debt.
+
+\textbf{Bug report next to new release:} This metric is the total number of bug reports created close to next release date. We use a threshold of 2 weeks to calculate this metric.  
+
+\textbf{Total number of files changed:} This is the total number of files that were changed in the current analyzed version. 
+
+ We selected these metrics based on the analysis of our three research questions that we cover in detail in the next section.
