--- a/bib.bib
+++ b/bib.bib
@@ -1,3 +1,132 @@
+@inproceedings{Chen2014MSR,
+ author = {Chen, Tse-Hsun and Nagappan, Meiyappan and Shihab, Emad and Hassan, Ahmed E.},
+ title = {An Empirical Study of Dormant Bugs},
+ booktitle = {Proceedings of the 11th Working Conference on Mining Software Repositories},
+ series = {MSR 2014},
+ year = {2014},
+ isbn = {978-1-4503-2863-0},
+ location = {Hyderabad, India},
+ pages = {82--91},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2597073.2597108},
+ doi = {10.1145/2597073.2597108},
+ acmid = {2597108},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Empirical Study, Software Bugs, Software Quality},
+} 
+
+@inproceedings{garcia2014MSR,
+ author = {Valdivia Garcia, Harold and Shihab, Emad},
+ title = {Characterizing and Predicting Blocking Bugs in Open Source Projects},
+ booktitle = {Proceedings of the 11th Working Conference on Mining Software Repositories},
+ series = {MSR 2014},
+ year = {2014},
+ isbn = {978-1-4503-2863-0},
+ location = {Hyderabad, India},
+ pages = {72--81},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/2597073.2597099},
+ doi = {10.1145/2597073.2597099},
+ acmid = {2597099},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {Code Metrics, Post-release Defects, Process Metrics},
+} 
+
+@inproceedings{Guo2010ICSM,
+ author = {Guo, Philip J. and Zimmermann, Thomas and Nagappan, Nachiappan and Murphy, Brendan},
+ title = {Characterizing and Predicting Which Bugs Get Fixed: An Empirical Study of Microsoft Windows},
+ booktitle = {Proceedings of the 32Nd ACM/IEEE International Conference on Software Engineering - Volume 1},
+ series = {ICSE '10},
+ year = {2010},
+ isbn = {978-1-60558-719-6},
+ location = {Cape Town, South Africa},
+ pages = {495--504},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1806799.1806871},
+ doi = {10.1145/1806799.1806871},
+ acmid = {1806871},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
+@inproceedings{Hindle2008MSR,
+ author = {Hindle, Abram and German, Daniel M. and Holt, Ric},
+ title = {What Do Large Commits Tell Us?: A Taxonomical Study of Large Commits},
+ booktitle = {Proceedings of the 2008 International Working Conference on Mining Software Repositories},
+ series = {MSR '08},
+ year = {2008},
+ isbn = {978-1-60558-024-1},
+ location = {Leipzig, Germany},
+ pages = {99--108},
+ numpages = {10},
+ url = {http://doi.acm.org/10.1145/1370750.1370773},
+ doi = {10.1145/1370750.1370773},
+ acmid = {1370773},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {large commits, software evolution, source control system},
+}
+
+@article{Kruchten2013GSOFT,
+ author = {Kruchten, Philippe and Nord, Robert L. and Ozkaya, Ipek and Falessi, Davide},
+ title = {Technical Debt: Towards a Crisper Definition Report on the 4th International Workshop on Managing Technical Debt},
+ journal = {SIGSOFT Softw. Eng. Notes},
+ issue_date = {September 2013},
+ volume = {38},
+ number = {5},
+ month = aug,
+ year = {2013},
+ issn = {0163-5948},
+ pages = {51--54},
+ numpages = {4},
+ url = {http://doi.acm.org/10.1145/2507288.2507326},
+ doi = {10.1145/2507288.2507326},
+ acmid = {2507326},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {software economics, software evolution, software quality, state of the practice, technical debt},
+} 
+
+@incollection{Seaman201125,
+  title = "Chapter 2 - Measuring and Monitoring Technical Debt ",
+  editor = "Marvin V. Zelkowitz",
+  booktitle = "",
+  publisher = "Elsevier",
+  year = "2011",
+  volume = "82",
+  pages = "25 - 46",
+  series = "Advances in Computers ",
+  issn = "0065-2458",
+  doi = "http://dx.doi.org/10.1016/B978-0-12-385512-1.00002-5",
+  url = "http://www.sciencedirect.com/science/article/pii/B9780123855121000025",
+  author = "Carolyn Seaman and Yuepu Guo"
+}
+
+@INPROCEEDINGS{shihab2010WCRE, 
+  author={Shihab, E. and Ihara, A. and Kamei, Y. and Ibrahim, W.M. and Ohira, M. and Adams, B. and Hassan, A.E. and Matsumoto, K.-i.}, 
+  booktitle={Reverse Engineering (WCRE), 2010 17th Working Conference on}, 
+  title={Predicting Re-opened Bugs: A Case Study on the Eclipse Project}, 
+  year={2010}, 
+  month={Oct}, 
+  pages={249-258}, 
+  keywords={decision trees;program debugging;software maintenance;decision trees;eclipse project;software maintenance resource;team dimension;text description;Accuracy;Computer bugs;Data mining;Databases;Decision trees;Predictive models;Software;Re-opened bugs;software quality}, 
+  doi={10.1109/WCRE.2010.36}, 
+  ISSN={1095-1350},
+}
+
+@INPROCEEDINGS{zhimmerman2010ICSM, 
+author={Zimmermann, T. and Nagappan, N. and Guo, P.J. and Murphy, B.}, 
+booktitle={Software Engineering (ICSE), 2012 34th International Conference on}, 
+title={Characterizing and predicting which bugs get reopened}, 
+year={2012}, 
+month={June}, 
+pages={1074-1083}, 
+keywords={operating systems (computers);program debugging;software engineering;Microsoft Windows operating system;bug reopen;bug reports;bugs fixing;empirical case study;large-scale quantitative study;software development process;software system;statistical models;Computer bugs;Databases;Humans;Personnel;Programming;Software;Testing;bug reopen;bug report;bug triage}, 
+doi={10.1109/ICSE.2012.6227112}, 
+ISSN={0270-5257},}
+
 @misc{chrome_releases,
   title = {Chrome Releases},
   howpublished = {\url{http://googlechromereleases.blogspot.ca/}},
@@ -7,6 +136,12 @@
 @misc{commit_guru,
   title = {Commit Guru},
   howpublished = {\url{http://commit.guru/}},
+  note = {Accessed: 2015-04-15}
+}
+
+@misc{understand_metrics,
+  title = {Understand Metrics},
+  howpublished = {\url{https://scitools.com/support/metrics_list/?metricGroup=all}},
   note = {Accessed: 2015-04-15}
 }
 
