--- a/related_work.tex
+++ b/related_work.tex
@@ -1,1 +1,3 @@
+Chen et al. \cite{Chen2014MSR} conduct their work in dormant bugs. They classify dormant bugs as 
+
 Our work differs from previous work because a Defect Debt is a know issue to the development team whereas a Dormant Bug is a defect that is hidden for a long period of time and eventually it crash. In other words Defect Debt is know option not an accident.
