--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,6 @@
 \usepackage{epstopdf}
 \usepackage{array}
 
-
 \newcommand{\everton}[1]{\textcolor{blue}{{\it [Everton: #1]}}}
 \newcommand{\todo}[1]{\colorbox{yellow}{\textbf{[#1]}}}
 
@@ -34,9 +33,9 @@
 	\vspace{2mm}
 }
 
-\newcommand{\rqi}{\textbf{How to characterize Defect Debt in a software project?}}
-\newcommand{\rqii}{\textbf{Defect Debt has a negative impact in feature addition?}}
-\newcommand{\rqiii}{\textbf{It is possible to create a model to Defect Debt?}}
+\newcommand{\rqi}{\textbf{RQ1- How to characterize Defect Debt in a software project?}}
+\newcommand{\rqii}{\textbf{RQ2- Defect Debt has a negative impact in feature addition?}}
+\newcommand{\rqiii}{\textbf{RQ3- It is possible to create a model to Defect Debt?}}
 
 \begin{document}
 \title{On Characterizing and Modeling Defect Technical Debt}
@@ -65,6 +64,10 @@ Montreal, Canada\\
 \section{Approach}
 \label{sec:approach}
 \input{approach}
+
+\section{Case Study Results}
+\label{sec:results}
+\input{results}
 
 \section{Threats to validity}
 \label{sec:threats_to_validity}
