--- a/approach.tex
+++ b/approach.tex
@@ -5,7 +5,7 @@
   \includegraphics[width=1\textwidth]{figures/approach}
 \end{figure*}
 
-The goal of our project is to distinguish Defect Debt from Bugs. In order to do that we conducted a study using one large open source project, Google Chrome. We present our approach overview in \ref{fig:approach}. First, we extract data from the source code and from the issuer tracker repositories. Second,  we process the data to find relevant attributes and link them together. Third, we define our set of metrics and models. Then we analyze our results and answer the research questions. In the following sections we explain in details each one of the steps in our approach.   
+The goal of our project is to distinguish Defect Debt from Bugs. In order to do that we conducted a study using one large open source project, Google Chrome. We present our approach overview in figure \ref{fig:approach}. First, we extract data from the source code and from the issuer tracker repositories. Second,  we process the data to find relevant attributes and link them together. Third, we define our set of metrics. Then we analyze our results and answer the research questions. In the following sections we explain in details each one of the steps in our approach.   
 
 \subsection{Data Extraction}
 
