--- a/conclusion.tex
+++ b/conclusion.tex
@@ -2,7 +2,7 @@ In our study we analyzed Google Chrome a large open source project to understand
 
 We show in our approach how to extract, process and link data from this project. We also explain the different metrics that we selected and how we group the metrics into releases. 
 
-Making use of these case study setup we find that it is possible to characterize Defect Debt from bugs. Bugs are more impacting defects, and get fixed in the reported or in the next release. Whereas Defect Debt may linger in the system for a long time, but eventually it get fixed. We draw this conclusion after analyzing the behavior of the fixes throughout 25 different releases of the project. Based on the results, the average percentage of Bugs is of 69.55\%, and Defect Debt is of 30.44\%.
+We find that it is possible to characterize Defect Debt from bugs. Bugs are more impacting defects, and get fixed in the reported or in the next release. Whereas Defect Debt may linger in the system for a long time, but eventually it get fixed. We draw this conclusion after analyzing the behavior of the fixes throughout 25 different releases of the project. Based on the results, the average percentage of Bugs is of 69.55\%, and Defect Debt is of 30.44\%.
 
 We found that the defect debt does not impact negatively the addition of new features. Is important to notice that we are not considering other aspects that may impact quality.  
 
